@@ -1,5 +1,11 @@
 2019-10-31  Tobias Burnus  <tobias@codesourcery.com>
 
+	PR fortran/92284.
+	* trans-expr.c (gfc_conv_gfc_desc_to_cfi_desc): Free CFI descriptor
+	at the end; partial revised revert of Rev. 277502.
+
+2019-10-31  Tobias Burnus  <tobias@codesourcery.com>
+
 	PR fortran/92277
 	* trans-expr.c (gfc_conv_gfc_desc_to_cfi_desc): Fix DECL_ARTIFICIAL
 	checking.
